WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204697
[Web Animations] Forward-filling animations should not schedule updates while filling
https://bugs.webkit.org/show_bug.cgi?id=204697
Summary
[Web Animations] Forward-filling animations should not schedule updates while...
Antoine Quint
Reported
2019-11-29 02:16:07 PST
[Web Animations] Forward-filling animations should not schedule updates while filling
Attachments
Patch
(19.88 KB, patch)
2019-11-29 02:36 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Patch
(19.76 KB, patch)
2019-11-30 04:26 PST
,
Antoine Quint
dino
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2019-11-29 02:36:11 PST
Created
attachment 384493
[details]
Patch
Antoine Quint
Comment 2
2019-11-29 10:11:43 PST
Committed
r252944
: <
https://trac.webkit.org/changeset/252944
>
Radar WebKit Bug Importer
Comment 3
2019-11-29 10:12:19 PST
<
rdar://problem/57534005
>
Aakash Jain
Comment 4
2019-11-29 13:34:45 PST
(In reply to Antoine Quint from
comment #2
)
> Committed
r252944
: <
https://trac.webkit.org/changeset/252944
>
This broke Windows build with the error: WebAnimation.cpp(1325): warning C4715: 'WebCore::WebAnimation::timeToNextTick': not all control paths return a value e.g.:
https://build.webkit.org/builders/Apple%20Win%2010%20Release%20%28Build%29/builds/8702
This failure was also indicated by EWS.
WebKit Commit Bot
Comment 5
2019-11-29 13:50:58 PST
Re-opened since this is blocked by
bug 204709
Antoine Quint
Comment 6
2019-11-30 04:26:13 PST
Created
attachment 384540
[details]
Patch
Antoine Quint
Comment 7
2019-11-30 05:11:53 PST
Windows bots looking good with the new patch, which just adds a return clause after the switch statement in WebAnimation::timeToNextTick(). Not sure why that was required, the switch statement has a return state for all possible cases.
Antoine Quint
Comment 8
2019-11-30 05:15:58 PST
Committed
r252957
: <
https://trac.webkit.org/changeset/252957
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug